fixed z-index

--- a/George-Luther-Portfolio-Responsive-1/style.css
+++ b/George-Luther-Portfolio-Responsive-1/style.css
@@ -121,7 +121,7 @@ section {
 .group {
   position: relative;
   background-color: #ebd5d0;
-  z-index: -1;
+  z-index: 1;
   padding: 16px;
   margin: 0 5%;
   max-width: 90%;
